# carbon-app

./: .env  .gitignore  2.json  Cargo.toml  HELP.md  LICENSE  README.md  cache.json  watch-app.sh  watch-libs.sh
carbon_app/: Cargo.toml
carbon_app/src/: main.rs
ec3api/: Cargo.toml
ec3api/src/: lib.rs  material_filter.rs
shared/: Cargo.toml
shared/src/: jobs.rs  lib.rs  material_db.rs  project.rs  settings.rs
src/: main.rs
view/: Cargo.toml
view/src/: lib.rs  visuals.rs
