[package]
name = "carbon_app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
eframe = "0.27"
env_logger = "0.10.0"
view = { path = "../view" }
shared = { path = "../shared" }

[features]
