[package]
name = "view"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = "0.27"
egui-notify = "0.14"
egui_plot = "0.27"
shared = { path = "../shared" }
egui_tiles = "0.8"

[lib]
crate-type = ["rlib", "dylib"]

